5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1685_1932.log
== TEST (2019-05-08 18:52:49) 
-- CODE:
a = float (input(" "))
a1 =  float (input(" "))
b =  float (input(" "))
b1 = float (input(" "))
c =  float (input(" "))
c1 =  float (input(" "))

f1 = a/a1
f2 = b/b1
f3 = c/c1

if ((f1 > = f2) and (f3 > f1)) or ((f1 <= f2) and (f3 < f1)):
	print("1 e 2")
elif ((f1>= f3) and (f2 > f1))or ((f1 <= f3) and (f2 < f1)):
	print("1 e 3")
elif ((f2 > = f1) and (f3 > f2)) or ((f2 <= f1) and (f3 < f2)):
	print("2 e 1")
elif ((f2 >= f3) and (f1  > f2)) or ((f2 <= f3) and (f1 < f2)):
	print("2 e 3")
elif ((f3 > = f1) and (f2 > f3)) or ((f3 <= f1) and (f2 < f3)):
	print("3 e 1")
elif ((f3 >= f2) and (f1 > f3)) or ((f3 <= f2) and (f1 < f3)):
	print("3 e 2")
-- ERROR:
File "XXXX", line 12
    if ((f1 > = f2) and (f3 > f1)) or ((f1 <= f2) and (f3 < f1)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:53:03) 
-- CODE:
a = float (input(" "))
a1 =  float (input(" "))
b =  float (input(" "))
b1 = float (input(" "))
c =  float (input(" "))
c1 =  float (input(" "))

f1 = a/a1
f2 = b/b1
f3 = c/c1

if ((f1 >= f2) and (f3 > f1)) or ((f1 <= f2) and (f3 < f1)):
	print("1 e 2")
elif ((f1>= f3) and (f2 > f1))or ((f1 <= f3) and (f2 < f1)):
	print("1 e 3")
elif ((f2 > = f1) and (f3 > f2)) or ((f2 <= f1) and (f3 < f2)):
	print("2 e 1")
elif ((f2 >= f3) and (f1  > f2)) or ((f2 <= f3) and (f1 < f2)):
	print("2 e 3")
elif ((f3 > = f1) and (f2 > f3)) or ((f3 <= f1) and (f2 < f3)):
	print("3 e 1")
elif ((f3 >= f2) and (f1 > f3)) or ((f3 <= f2) and (f1 < f3)):
	print("3 e 2")
-- ERROR:
File "XXXX", line 16
    elif ((f2 > = f1) and (f3 > f2)) or ((f2 <= f1) and (f3 < f2)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:53:17) 
-- CODE:
a = float (input(" "))
a1 =  float (input(" "))
b =  float (input(" "))
b1 = float (input(" "))
c =  float (input(" "))
c1 =  float (input(" "))

f1 = a/a1
f2 = b/b1
f3 = c/c1

if ((f1 >= f2) and (f3 > f1)) or ((f1 <= f2) and (f3 < f1)):
	print("1 e 2")
elif ((f1>= f3) and (f2 > f1))or ((f1 <= f3) and (f2 < f1)):
	print("1 e 3")
elif ((f2 >= f1) and (f3 > f2)) or ((f2 <= f1) and (f3 < f2)):
	print("2 e 1")
elif ((f2 >= f3) and (f1  > f2)) or ((f2 <= f3) and (f1 < f2)):
	print("2 e 3")
elif ((f3 >= f1) and (f2 > f3)) or ((f3 <= f1) and (f2 < f3)):
	print("3 e 1")
elif ((f3 >= f2) and (f1 > f3)) or ((f3 <= f2) and (f1 < f3)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:53:55) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = a/a1
f2 = b/b1
f3 = c/c1

if ((f1 >= f2) and (f3 > f1)) or ((f1 <= f2) and (f3 < f1)):
	print("1 e 2")
elif ((f1>= f3) and (f2 > f1))or ((f1 <= f3) and (f2 < f1)):
	print("1 e 3")
elif ((f2 >= f1) and (f3 > f2)) or ((f2 <= f1) and (f3 < f2)):
	print("2 e 1")
elif ((f2 >= f3) and (f1  > f2)) or ((f2 <= f3) and (f1 < f2)):
	print("2 e 3")
elif ((f3 >= f1) and (f2 > f3)) or ((f3 <= f1) and (f2 < f3)):
	print("3 e 1")
elif ((f3 >= f2) and (f1 > f3)) or ((f3 <= f2) and (f1 < f3)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:55:03) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = abs(a/a1)
f2 = abs(b/b1)
f3 = abs(c/c1)

if ((f1 >= f2) and (f3 > f1)) or ((f1 <= f2) and (f3 < f1)):
	print("1 e 2")
elif ((f1>= f3) and (f2 > f1))or ((f1 <= f3) and (f2 < f1)):
	print("1 e 3")
elif ((f2 >= f1) and (f3 > f2)) or ((f2 <= f1) and (f3 < f2)):
	print("2 e 1")
elif ((f2 >= f3) and (f1  > f2)) or ((f2 <= f3) and (f1 < f2)):
	print("2 e 3")
elif ((f3 >= f1) and (f2 > f3)) or ((f3 <= f1) and (f2 < f3)):
	print("3 e 1")
elif ((f3 >= f2) and (f1 > f3)) or ((f3 <= f2) and (f1 < f3)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:31:35) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = abs(a/a1)
f2 = abs(b/b1)
f3 = abs(c/c1)

if ((f1 >= f2) and (f3 > f1)) or ((f1 <= f2) and (f3 < f1)):
	print("1 e 2")
elif ((f1>= f3) and (f2 > f1))or ((f1 <= f3) and (f2 < f1)):
	print("1 e 3")
elif ((f2 >= f1) and (f3 > f2)) or ((f2 <= f1) and (f3 < f2)):
	print("2 e 1")
elif ((f2 >= f3) and (f1  > f2)) or ((f2 <= f3) and (f1 < f2)):
	print("2 e 3")
elif ((f3 >= f1) and (f2 > f3)) or ((f3 <= f1) and (f2 < f3)):
	print("3 e 1")
elif ((f3 >= f2) and (f1 > f3)) or ((f3 <= f2) and (f1 < f3)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:33:18) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a/a1)
f2 = (b/b1)
f3 = (c/c1)

if ((f1 >= f2) and (f3 > f1)) or ((f1 <= f2) and (f3 < f1)):
	print("1 e 2")
elif ((f1>= f3) and (f2 > f1))or ((f1 <= f3) and (f2 < f1)):
	print("1 e 3")
elif ((f2 >= f1) and (f3 > f2)) or ((f2 <= f1) and (f3 < f2)):
	print("2 e 1")
elif ((f2 >= f3) and (f1  > f2)) or ((f2 <= f3) and (f1 < f2)):
	print("2 e 3")
elif ((f3 >= f1) and (f2 > f3)) or ((f3 <= f1) and (f2 < f3)):
	print("3 e 1")
elif ((f3 >= f2) and (f1 > f3)) or ((f3 <= f2) and (f1 < f3)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 12:34:23) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a/a1)
f2 = (b/b1)
f3 = (c/c1)

if ((f1 >= f2) and (f3 > f1)) or ((f1 <= f2) and (f3 < f1)):
	print("1 e 3")
elif ((f1>= f3) and (f2 > f1))or ((f1 <= f3) and (f2 < f1)):
	print("1 e 2")
elif ((f2 >= f1) and (f3 > f2)) or ((f2 <= f1) and (f3 < f2)):
	print("2 e 3")
elif ((f2 >= f3) and (f1  > f2)) or ((f2 <= f3) and (f1 < f2)):
	print("2 e 1")
elif ((f3 >= f1) and (f2 > f3)) or ((f3 <= f1) and (f2 < f3)):
	print("3 e 2")
elif ((f3 >= f2) and (f1 > f3)) or ((f3 <= f2) and (f1 < f3)):
	print("3 e 1")
-- EXECUTION TIME:
0.177198
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 3
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:46:26) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a/a1)
f2 = (b/b1)
f3 = (c/c1)

if ((f1 >= f2) and (f3 > f1) and (f3 > f1)):
	print("1 e 2")
elif ((f1 <= f2) and (f3 < f1) and (f3 < f2)):
	print("1 e 2")
elif ((f1>= f3) and (f2 > f1) and (f2 > f3)):
	print("1 e 3")
elif((f1 <= f3) and (f2 < f1) and (f2 < f3) ):
	print("1 e 3")
elif ((f2 >= f1) and (f3 > f2)and (f3 > f1)) :
	print("2 e 1")
elif ((f2 <= f1) and (f3 < f2) and (f3 < f1)):
	print("2 e 1")
elif ((f2 >= f3) and (f1  > f2) and (f1 > f3)):
	print("2 e 3")
elif((f2 <= f3) and (f1 < f2) and (f1 < f3)):
	print("2 e 3")
elif ((f3 >= f1) and (f2 > f3) and (f2 > f1)):
	print("3 e 1")
elif ((f3 <= f1) and (f2 < f3) and (f2 < f1)):
	print("3 e 1")
elif ((f3 >= f2) and (f1 > f3) and (f1 > f2)):
	print("3 e 2")
elif ((f3 <= f2) and (f1 < f3) and (f1 < f2)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:49:55) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a/a1)
f2 = (b/b1)
f3 = (c/c1)
f = max(f1, f2, f3)
g = min (f1, f2, f3)
h = 
if ((f1 > f2) and (f3 > f1) and (f3 > f1)):
	print("1 e 2")
elif ((f1 < f2) and (f3 < f1) and (f3 < f2)):
	print("1 e 2")
elif ((f1> f3) and (f2 > f1) and (f2 > f3)):
	print("1 e 3")
elif((f1 < f3) and (f2 < f1) and (f2 < f3) ):
	print("1 e 3")
elif ((f2 > f1) and (f3 > f2)and (f3 > f1)) :
	print("2 e 1")
elif ((f2 < f1) and (f3 < f2) and (f3 < f1)):
	print("2 e 1")
elif ((f2 > f3) and (f1  > f2) and (f1 > f3)):
	print("2 e 3")
elif((f2 < f3) and (f1 < f2) and (f1 < f3)):
	print("2 e 3")
elif ((f3 > f1) and (f2 > f3) and (f2 > f1)):
	print("3 e 1")
elif ((f3 < f1) and (f2 < f3) and (f2 < f1)):
	print("3 e 1")
elif ((f3 > f2) and (f1 > f3) and (f1 > f2)):
	print("3 e 2")
elif ((f3 < f2) and (f1 < f3) and (f1 < f2)):
	print("3 e 2")
-- ERROR:
File "XXXX", line 13
    h = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:50:05) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a/a1)
f2 = (b/b1)
f3 = (c/c1)
f = max(f1, f2, f3)
g = min (f1, f2, f3)

if ((f1 > f2) and (f3 > f1) and (f3 > f1)):
	print("1 e 2")
elif ((f1 < f2) and (f3 < f1) and (f3 < f2)):
	print("1 e 2")
elif ((f1> f3) and (f2 > f1) and (f2 > f3)):
	print("1 e 3")
elif((f1 < f3) and (f2 < f1) and (f2 < f3) ):
	print("1 e 3")
elif ((f2 > f1) and (f3 > f2)and (f3 > f1)) :
	print("2 e 1")
elif ((f2 < f1) and (f3 < f2) and (f3 < f1)):
	print("2 e 1")
elif ((f2 > f3) and (f1  > f2) and (f1 > f3)):
	print("2 e 3")
elif((f2 < f3) and (f1 < f2) and (f1 < f3)):
	print("2 e 3")
elif ((f3 > f1) and (f2 > f3) and (f2 > f1)):
	print("3 e 1")
elif ((f3 < f1) and (f2 < f3) and (f2 < f1)):
	print("3 e 1")
elif ((f3 > f2) and (f1 > f3) and (f1 > f2)):
	print("3 e 2")
elif ((f3 < f2) and (f1 < f3) and (f1 < f2)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:51:42) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a - a1)
f2 = (b - b1)
f3 = (c - c1)
f = max(f1, f2, f3)
g = min (f1, f2, f3)

if ((f1 > f2) and (f3 > f1) and (f3 > f1)):
	print("1 e 2")
elif ((f1 < f2) and (f3 < f1) and (f3 < f2)):
	print("1 e 2")
elif ((f1> f3) and (f2 > f1) and (f2 > f3)):
	print("1 e 3")
elif((f1 < f3) and (f2 < f1) and (f2 < f3) ):
	print("1 e 3")
elif ((f2 > f1) and (f3 > f2)and (f3 > f1)) :
	print("2 e 1")
elif ((f2 < f1) and (f3 < f2) and (f3 < f1)):
	print("2 e 1")
elif ((f2 > f3) and (f1  > f2) and (f1 > f3)):
	print("2 e 3")
elif((f2 < f3) and (f1 < f2) and (f1 < f3)):
	print("2 e 3")
elif ((f3 > f1) and (f2 > f3) and (f2 > f1)):
	print("3 e 1")
elif ((f3 < f1) and (f2 < f3) and (f2 < f1)):
	print("3 e 1")
elif ((f3 > f2) and (f1 > f3) and (f1 > f2)):
	print("3 e 2")
elif ((f3 < f2) and (f1 < f3) and (f1 < f2)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:52:24) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a - a1)
f2 = (b - b1)
f3 = (c - c1)
f = max(f1, f2, f3)
g = min (f1, f2, f3)

if ((f1 > f2) and (f3 > f1) and (f3 > f1)):
	print("1 e 2")
elif ((f1 < f2) and (f3 < f1) and (f3 < f2)):
	print("1 e 2")
elif ((f1> f3) and (f2 > f1) and (f2 > f3)):
	print("1 e 3")
elif((f1 < f3) and (f2 < f1) and (f2 < f3) ):
	print("1 e 3")
elif ((f2 > f1) and (f3 > f2)and (f3 > f1)) :
	print("2 e 1")
elif ((f2 < f1) and (f3 < f2) and (f3 < f1)):
	print("2 e 1")
elif ((f2 > f3) and (f1  > f2) and (f1 > f3)):
	print("2 e 3")
elif((f2 < f3) and (f1 < f2) and (f1 < f3)):
	print("2 e 3")
elif ((f3 > f1) and (f2 > f3) and (f2 > f1)):
	print("3 e 1")
elif ((f3 < f1) and (f2 < f3) and (f2 < f1)):
	print("3 e 1")
elif ((f3 > f2) and (f1 > f3) and (f1 > f2)):
	print("3 e 2")
elif ((f3 < f2) and (f1 < f3) and (f1 < f2)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:52:53) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a - a1)
f2 = (b - b1)
f3 = (c - c1)

if ((f1 > f2) and (f3 > f1) and (f3 > f1)):
	print("1 e 2")
elif ((f1 < f2) and (f3 < f1) and (f3 < f2)):
	print("1 e 2")
elif ((f1> f3) and (f2 > f1) and (f2 > f3)):
	print("1 e 3")
elif((f1 < f3) and (f2 < f1) and (f2 < f3) ):
	print("1 e 3")
elif ((f2 > f1) and (f3 > f2)and (f3 > f1)) :
	print("2 e 1")
elif ((f2 < f1) and (f3 < f2) and (f3 < f1)):
	print("2 e 1")
elif ((f2 > f3) and (f1  > f2) and (f1 > f3)):
	print("2 e 3")
elif((f2 < f3) and (f1 < f2) and (f1 < f3)):
	print("2 e 3")
elif ((f3 > f1) and (f2 > f3) and (f2 > f1)):
	print("3 e 1")
elif ((f3 < f1) and (f2 < f3) and (f2 < f1)):
	print("3 e 1")
elif ((f3 > f2) and (f1 > f3) and (f1 > f2)):
	print("3 e 2")
elif ((f3 < f2) and (f1 < f3) and (f1 < f2)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:53:13) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a - a1)
f2 = (b - b1)
f3 = (c - c1)

if ((f1 > f2) and (f3 > f1) and (f3 > f1)):
	print("1 e 2")
elif ((f1 < f2) and (f3 < f1) and (f3 < f2)):
	print("1 e 2")
elif ((f1> f3) and (f2 > f1) and (f2 > f3)):
	print("1 e 3")
elif((f1 < f3) and (f2 < f1) and (f2 < f3) ):
	print("1 e 3")
elif ((f2 > f1) and (f3 > f2)and (f3 > f1)) :
	print("2 e 1")
elif ((f2 < f1) and (f3 < f2) and (f3 < f1)):
	print("2 e 1")
elif ((f2 > f3) and (f1  > f2) and (f1 > f3)):
	print("2 e 3")
elif((f2 < f3) and (f1 < f2) and (f1 < f3)):
	print("2 e 3")
elif ((f3 > f1) and (f2 > f3) and (f2 > f1)):
	print("3 e 1")
elif ((f3 < f1) and (f2 < f3) and (f2 < f1)):
	print("3 e 1")
elif ((f3 > f2) and (f1 > f3) and (f1 > f2)):
	print("3 e 2")
elif ((f3 < f2) and (f1 < f3) and (f1 < f2)):
	print("3 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 12:53:31) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

f1 = (a - a1)
f2 = (b - b1)
f3 = (c - c1)

if ((f1 > f2) and (f3 > f1) and (f3 > f1)):
	print("1 e 2")
elif ((f1 < f2) and (f3 < f1) and (f3 < f2)):
	print("1 e 2")
elif ((f1> f3) and (f2 > f1) and (f2 > f3)):
	print("1 e 3")
elif((f1 < f3) and (f2 < f1) and (f2 < f3) ):
	print("1 e 3")
elif ((f2 > f1) and (f3 > f2)and (f3 > f1)) :
	print("2 e 1")
elif ((f2 < f1) and (f3 < f2) and (f3 < f1)):
	print("2 e 1")
elif ((f2 > f3) and (f1  > f2) and (f1 > f3)):
	print("2 e 3")
elif((f2 < f3) and (f1 < f2) and (f1 < f3)):
	print("2 e 3")
elif ((f3 > f1) and (f2 > f3) and (f2 > f1)):
	print("3 e 1")
elif ((f3 < f1) and (f2 < f3) and (f2 < f1)):
	print("3 e 1")
elif ((f3 > f2) and (f1 > f3) and (f1 > f2)):
	print("3 e 2")
elif ((f3 < f2) and (f1 < f3) and (f1 < f2)):
	print("3 e 2")
-- EXECUTION TIME:
0.140472
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:

-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
3 e 1
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:55:37) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (a - a1)
print(p1)



-- OUTPUT:
0.40000000000000036
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:56:04) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (a - a1)
print(abs(p1))


-- OUTPUT:
0.40000000000000036
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:56:24) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (a - a1)
print(abs(p1))


-- OUTPUT:
0.40000000000000036
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:57:28) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1)
print(p1))


-- ERROR:
File "XXXX", line 9
    print(p1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:57:38) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1)
print(p1)


-- ERROR:
File "XXXX", line 9
    print(p1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:57:48) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1)
print (p1)


-- ERROR:
File "XXXX", line 9
    print (p1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:58:03) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1)
print(p1)


-- ERROR:
File "XXXX", line 9
    print(p1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:58:49) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1))
print(p1)


-- OUTPUT:
0.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:14:09) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1))
p2 = (round(abs(b - b1), 1))
p3 = (round(abs(c - c1), 1))

if (p1 > p2) and (p1 > p3):
	if (p2 > p3):
		print("1 e 2")
	elif (p2 < p3):
		print("1 e 3")
elif (p2 > p1) and (p2 > p3):
	if (p1 > p3):
		print("2 e 1")
	elif (p1 < p3):
		print("2 e 3")
elif (p3 > p1) and (p3 > p2):
	if (p1 > p2) :
		print("3 e 1")
	elif (p1 < p2):
		print("3 e 2")
-- OUTPUT:
0.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:15:25) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1))
p2 = (round(abs(b - b1), 1))
p3 = (round(abs(c - c1), 1))

if (p1 > p2) and (p1 > p3):
	if (p2 > p3):
		print("1 e 2")
	elif (p2 < p3):
		print("1 e 3")
elif (p2 > p1) and (p2 > p3):
	if (p1 > p3):
		print("2 e 1")
	elif (p1 < p3):
		print("2 e 3")
elif (p3 > p1) and (p3 > p2):
	if (p1 > p2) :
		print("3 e 1")
	elif (p1 < p2):
		print("3 e 2")
-- OUTPUT:
0.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:15:58) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1))
p2 = (round(abs(b - b1), 1))
p3 = (round(abs(c - c1), 1))

if (p1 > p2) and (p1 > p3):
	if (p2 > p3):
		print("1 e 2")
	elif (p2 < p3):
		print("1 e 3")
elif (p2 > p1) and (p2 > p3):
	if (p1 > p3):
		print("2 e 1")
	elif (p1 < p3):
		print("2 e 3")
elif (p3 > p1) and (p3 > p2):
	if (p1 > p2) :
		print("3 e 1")
	elif (p1 < p2):
		print("3 e 2")
-- OUTPUT:
0.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:16:06) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1))
p2 = (round(abs(b - b1), 1))
p3 = (round(abs(c - c1), 1))

if (p1 > p2) and (p1 > p3):
	if (p2 > p3):
		print("1 e 2")
	elif (p2 < p3):
		print("1 e 3")
elif (p2 > p1) and (p2 > p3):
	if (p1 > p3):
		print("2 e 1")
	elif (p1 < p3):
		print("2 e 3")
elif (p3 > p1) and (p3 > p2):
	if (p1 > p2) :
		print("3 e 1")
	elif (p1 < p2):
		print("3 e 2")
-- OUTPUT:
0.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:18:23) 
-- CODE:
a = float (input("a: "))
a1 =  float (input("a1: "))
b =  float (input("b: "))
b1 = float (input("b1: "))
c =  float (input("c: "))
c1 =  float (input("c1: "))

p1 = (round(abs(a - a1), 1))
p2 = (round(abs(b - b1), 1))
p3 = (round(abs(c - c1), 1))

if (p1 > p2) and (p1 > p3):
	if (p2 > p3):
		print("1 e 2")
	elif (p2 < p3):
		print("1 e 3")
elif (p2 > p1) and (p2 > p3):
	if (p1 > p3):
		print("2 e 1")
	elif (p1 < p3):
		print("2 e 3")
elif (p3 > p1) and (p3 > p2):
	if (p1 > p2) :
		print("3 e 1")
	elif (p1 < p2):
		print("3 e 2")
-- OUTPUT:
0.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-17 21:55:03) 
-- CODE:
#Lendo as variaveis

a = float(input("Distância entre os olhos: "))
a1 = float(input("Distância entre o nariz e o queixo: "))
b = float(input("Distância entre os olhos: "))
b1 = float(input("Distância entre o nariz e o queixo: "))
c = float(input("Distância entre os olhos: "))
c1 = float(input("Distância entre o nariz e o queixo: "))

# Razao P
p1 = abs(a / a1)
p2 = abs(b / b1)
p3 = abs(c / c1)

if ((p1 - p2) > (p1 - p3)) and (p1 > p2):
	print ("1 e 2")
elif ((p1 - p2) > (p1 - p3)) and (p1 < p2):
	print("2 e 1")
elif ((p1 - p3) > (p1 - p2)) and (p1 > p3):
	print("1 e 3")
elif ((p1 - p3) > (p1 - p2)) and (p1 < p3):
	print("3 e 1")
elif ((p2 - p3) > (p2 - p1)) and (p2 > p3):
	print("2 e 3")
elif ((p2 - p3) > (p2 - p1)) and (p2 < p3):
	print("3 e 2")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-17 21:55:29) 
-- CODE:
#Lendo as variaveis

a = float(input("Distancia entre os olhos: "))
a1 = float(input("Distancia entre o nariz e o queixo: "))
b = float(input("Distancia entre os olhos: "))
b1 = float(input("Distancia entre o nariz e o queixo: "))
c = float(input("Distancia entre os olhos: "))
c1 = float(input("Distancia entre o nariz e o queixo: "))

# Razao P
p1 = abs(a / a1)
p2 = abs(b / b1)
p3 = abs(c / c1)

if ((p1 - p2) > (p1 - p3)) and (p1 > p2):
	print ("1 e 2")
elif ((p1 - p2) > (p1 - p3)) and (p1 < p2):
	print("2 e 1")
elif ((p1 - p3) > (p1 - p2)) and (p1 > p3):
	print("1 e 3")
elif ((p1 - p3) > (p1 - p2)) and (p1 < p3):
	print("3 e 1")
elif ((p2 - p3) > (p2 - p1)) and (p2 > p3):
	print("2 e 3")
elif ((p2 - p3) > (p2 - p1)) and (p2 < p3):
	print("3 e 2")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-17 21:55:53) 
-- CODE:
#Lendo as variaveis

a = float(input("Distancia entre os olhos: "))
a1 = float(input("Distancia entre o nariz e o queixo: "))
b = float(input("Distancia entre os olhos: "))
b1 = float(input("Distancia entre o nariz e o queixo: "))
c = float(input("Distancia entre os olhos: "))
c1 = float(input("Distancia entre o nariz e o queixo: "))

# Razao P
p1 = abs(a / a1)
p2 = abs(b / b1)
p3 = abs(c / c1)

if ((p1 - p2) > (p1 - p3)) and (p1 > p2):
	print ("1 e 2")
elif ((p1 - p2) > (p1 - p3)) and (p1 < p2):
	print("2 e 1")
elif ((p1 - p3) > (p1 - p2)) and (p1 > p3):
	print("1 e 3")
elif ((p1 - p3) > (p1 - p2)) and (p1 < p3):
	print("3 e 1")
elif ((p2 - p3) > (p2 - p1)) and (p2 > p3):
	print("2 e 3")
elif ((p2 - p3) > (p2 - p1)) and (p2 < p3):
	print("3 e 2")
-- EXECUTION TIME:
0.892174
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:

-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-17 22:01:03) 
-- CODE:
#Lendo as variaveis

a = float(input("Distancia entre os olhos: "))
a1 = float(input("Distancia entre o nariz e o queixo: "))
b = float(input("Distancia entre os olhos: "))
b1 = float(input("Distancia entre o nariz e o queixo: "))
c = float(input("Distancia entre os olhos: "))
c1 = float(input("Distancia entre o nariz e o queixo: "))

# Razao P
p1 = abs(a / a1)
p2 = abs(b / b1)
p3 = abs(c / c1)

if ((p1 - p2) > (p1 - p3)) and (p1 > p2):
	print (1, "e ", 2)
elif ((p1 - p2) > (p1 - p3)) and (p1 < p2):
	print(2, "e ", 1)
elif ((p1 - p3) > (p1 - p2)) and (p1 > p3):
	print(1, "e ", 3)
elif ((p1 - p3) > (p1 - p2)) and (p1 < p3):
	print(3, "e ", 1)
elif ((p2 - p3) > (p2 - p1)) and (p2 > p3):
	print(2, "e ", 3)
elif ((p2 - p3) > (p2 - p1)) and (p2 < p3):
	print(3, "e ", 2)
-- EXECUTION TIME:
0.654245
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e  3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:

-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-17 22:01:10) 
-- CODE:
#Lendo as variaveis

a = float(input("Distancia entre os olhos: "))
a1 = float(input("Distancia entre o nariz e o queixo: "))
b = float(input("Distancia entre os olhos: "))
b1 = float(input("Distancia entre o nariz e o queixo: "))
c = float(input("Distancia entre os olhos: "))
c1 = float(input("Distancia entre o nariz e o queixo: "))

# Razao P
p1 = abs(a / a1)
p2 = abs(b / b1)
p3 = abs(c / c1)

if ((p1 - p2) > (p1 - p3)) and (p1 > p2):
	print (1, "e ", 2)
elif ((p1 - p2) > (p1 - p3)) and (p1 < p2):
	print(2, "e ", 1)
elif ((p1 - p3) > (p1 - p2)) and (p1 > p3):
	print(1, "e ", 3)
elif ((p1 - p3) > (p1 - p2)) and (p1 < p3):
	print(3, "e ", 1)
elif ((p2 - p3) > (p2 - p1)) and (p2 > p3):
	print(2, "e ", 3)
elif ((p2 - p3) > (p2 - p1)) and (p2 < p3):
	print(3, "e ", 2)
-- OUTPUT:
1 e  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-17 22:01:56) 
-- CODE:
#Lendo as variaveis

a = float(input("Distancia entre os olhos: "))
a1 = float(input("Distancia entre o nariz e o queixo: "))
b = float(input("Distancia entre os olhos: "))
b1 = float(input("Distancia entre o nariz e o queixo: "))
c = float(input("Distancia entre os olhos: "))
c1 = float(input("Distancia entre o nariz e o queixo: "))

# Razao P
p1 = abs(a / a1)
p2 = abs(b / b1)
p3 = abs(c / c1)

if ((p1 - p2) > (p1 - p3)) and (p1 > p2):
	print (1, "e ",2)
elif ((p1 - p2) > (p1 - p3)) and (p1 < p2):
	print(2, "e ",1)
elif ((p1 - p3) > (p1 - p2)) and (p1 > p3):
	print(1, "e ",3)
elif ((p1 - p3) > (p1 - p2)) and (p1 < p3):
	print(3, "e ",1)
elif ((p2 - p3) > (p2 - p1)) and (p2 > p3):
	print(2, "e ",3)
elif ((p2 - p3) > (p2 - p1)) and (p2 < p3):
	print(3, "e ",2)
-- EXECUTION TIME:
0.838796
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e  3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:

-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-17 22:02:55) 
-- CODE:
#Lendo as variaveis

a = float(input("Distancia entre os olhos: "))
a1 = float(input("Distancia entre o nariz e o queixo: "))
b = float(input("Distancia entre os olhos: "))
b1 = float(input("Distancia entre o nariz e o queixo: "))
c = float(input("Distancia entre os olhos: "))
c1 = float(input("Distancia entre o nariz e o queixo: "))

# Razao P
p1 = abs(a / a1)
p2 = abs(b / b1)
p3 = abs(c / c1)

if (abs(p1 - p2) > abs(p1 - p3)) and (p1 > p2):
	print (1, "e ",2)
elif (abs(p1 - p2) > abs(p1 - p3)) and (p1 < p2):
	print(2, "e ",1)
elif (abs(p1 - p3) > abs(p1 - p2)) and (p1 > p3):
	print(1, "e ",3)
elif (abs(p1 - p3) > abs(p1 - p2)) and (p1 < p3):
	print(3, "e ",1)
elif (abs(p2 - p3) > abs(p2 - p1)) and (p2 > p3):
	print(2, "e ",3)
elif (abs(p2 - p3) > abs(p2 - p1)) and (p2 < p3):
	print(3, "e ",2)
-- OUTPUT:
2 e  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-17 22:06:49) 
-- CODE:
#Lendo as variaveis

a = float(input("Distancia entre os olhos: "))
a1 = float(input("Distancia entre o nariz e o queixo: "))
b = float(input("Distancia entre os olhos: "))
b1 = float(input("Distancia entre o nariz e o queixo: "))
c = float(input("Distancia entre os olhos: "))
c1 = float(input("Distancia entre o nariz e o queixo: "))

# Razao P
p1 = abs(a / a1)
p2 = abs(b / b1)
p3 = abs(c / c1)

if (abs(p1 - p2) > abs(p1 - p3)) and (p1 > p2):
	print (1, "e ",2)
elif (abs(p1 - p2) > abs(p1 - p3)) and (p1 < p2):
	print(2, "e ",1)
elif (abs(p1 - p3) > abs(p1 - p2)) and (p1 > p3):
	print(1, "e ",3)
elif (abs(p1 - p3) > abs(p1 - p2)) and (p1 < p3):
	print(3, "e ",1)
elif (abs(p2 - p3) > abs(p2 - p1)) and (p2 > p3):
	print(2, "e ",3)
elif (abs(p2 - p3) > abs(p2 - p1)) and (p2 < p3):
	print(3, "e ",2)
elif (p1 == p2) and (p1 != p3):
	print (1, "e ",2)
elif (p1 == p3) and (p1 != p2):
	print(1, "e ",3)
elif (p2 == p3) and (p1 != p2):
	print(2, "e ",3)
-- EXECUTION TIME:
0.757204
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
2 e  1
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
3 e  1
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e  3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
